--- a/Thesis/thesis-priorWork.tex
+++ b/Thesis/thesis-priorWork.tex
@@ -1,6 +1,6 @@
 \chapter{Prior Work}
 
-This chapter begins with an overview of previous SMS research in support of the hypothesis of this work in an attempt to debunk what is known as the auditory advantage \ref{AudAdv}. From there, three specific research projects are discussed, each directly informing design of the haptic built for this project: the haptic drum kit \ref{HD}, vibrotactile metronome \ref{vibrotactileMetronome}, and the continuous visual metronome \ref{visualMet}. To conclude, \ref{commercial} grants a brief insight towards commercially realized products relevant to the field.
+This chapter begins with an overview of previous SMS research in an attempt to debunk what is known as the auditory advantage \ref{AudAdv}. Three specific research projects are then discussed, each directly informing design of the haptic built for this project: the haptic drum kit \ref{HD}, vibrotactile metronome \ref{vibrotactileMetronome}, and the continuous visual metronome \ref{visualMet}. To conclude, \ref{commercial} grants a brief insight towards commercially realized products relevant to the field.
 
 \section{Auditory Advantage} \label{AudAdv}
 Most SMS research leans toward the notion of a distinct advantage from the discretely timed auditory stimulus, implying that the neural and evolutionary mechanisms underlying beat synchronization are modality-specific. The following examples are proponents of the counterargument, predominantly involving the relatively new field of touch.
@@ -29,11 +29,7 @@ The \textit{Vibrotactile Metronome} is the current thesis project of Patrick Ign
 
 The work has some fascinating parallels to this project and has granted some very tangible insights towards testing and overall procedure. Patrick’s overall goal was to propose a device which uses tactile sense to provide similar functionality to a click track as it’s used for a contemporary classical music conductor with the added benefit of not blocking the ear or interfering with the conductors perception \cite{ignoto2017development}.
 
-His guide for design requirements was the director and conductor of the contemporary music ensemble, Professor Guillaume Bourgogne. He gave Patrick the constraint that the pulses should feel continuous and not discrete, even mentioning a pendulum motion as the descriptive feeling. Furthermore, the pulses peak amplitude had to line up with the audio track. To synchronize with the audio click he triggered the haptic pulse midway between two audio clicks.
-
-The haptic design consisted of two ERM’s and one pager buzzer. A transmitter was connected to a PC running the visual programming language Max. Real-time audio analysis of the incoming signal was completed using the bonk~ object to find downbeats. This triggered the generation of the vibrotactile envelope signal and a control message was transmitted to the device.
-
-A novel addition to SMS research was the proposition to redefine the Inter-Onset Interval as half previous IOI (rise time) + half nexts IOI (decay time) in what is claimed as more precision to accommodate varying pulse lengths.
+The haptic design consisted of two ERM’s and one pager buzzer. A transmitter was connected to a PC running the visual programming language Max. Real-time audio analysis of the incoming signal was completed using the bonk~ object to find downbeats. This triggered the generation of the vibrotactile envelope signal and a control message was transmitted to the device. The pulses were to feel continuous and not discrete, mimicking that of a pendulum motion. The pulses peak amplitude had to line up with the audio track. To synchronize with the audio click he triggered the haptic pulse midway between two audio clicks.
 
 At the end of the proposal, the real-time setup was migrated to post-processing in Matlab since the hardware was having trouble in keeping up with the buffering. Not much insight was given as to how the vibrotactile waveform was shaped; it is assumed that some level of motor control was involved.
 
@@ -41,7 +37,7 @@ At the end of the proposal, the real-time setup was migrated to post-processing 
 In a novel advancement challenging the auditory advantage and perhaps paving the way towards a more meaningful gesture, researchers in the Psychology department at Sun Yat-Sin University in Guangdong found continuous motion of a bouncing ball to be as stable as synchronization to an auditory metronome
 ~\cite{gan2015synchronization}.
 
-Though stability of beat synchronization to discrete visual modalities, such as a flash of light, has been shown to be less stable that its auditory counterpart, the design of a more meaningful visual had been previously unexplored. The team designed a visual bouncing ball simulation which manipulated acceleration animation to fit the IOI desired. Participants were instructed to tap to the bottom position of the bounce. Results for the bouncing ball visual were nearly equivalent to the auditory control tests. The research carried out by this group was direct motivation to expand this project into the tactile modality.
+Stability of beat synchronization to discrete visual modalities, such as a flash of light, had been previously shown to be less stable that its auditory counterpart. However, the design and impact of a continuous visual metronome had yet to be explored. The team designed a visual bouncing ball simulation which manipulated acceleration animation to fit the IOI desired. Participants were instructed to tap to the bottom position of the bounce. Results for the bouncing ball visual were nearly equivalent to the auditory control tests. The research carried out by this group was direct motivation to expand this project into the tactile modality.
 
 \subsection{Commercial Introspection} \label{commercial}
 The Peterson tuner BodyBeat Sync (\$140) seeks to revolutionize the traditional metronome through its extensive coverage of all three modalities with a wearable pulsing vibration unit which claims to “allow musicians to easily internalize the beat and develop a note value relationship both audibly and physically” \cite{Peterson}.
@@ -49,4 +45,4 @@ The Peterson tuner BodyBeat Sync (\$140) seeks to revolutionize the traditional 
 The Soundbrenner (\$99) is a vibration based metronome using an instantaneous pulse and claims that in freeing the ears, it has “brought the rhythm closer to the body, making it more comfortable and natural to feel the beat and swing of the music instead of chasing the click” \cite{Soundbrenner}.
 
 \section{Summary}
-These specific haptic ventures have served as foundational works to inform design perspective. The work accomplished by the haptic drumset research group directly served to inform the threshold for acceptable timing of the vibrotactiles. 50 ms ramp up time with 50 ms separation yields a 400 ms (150 bpm) window which agrees well with prior SMS research of rate limits. The vibrotactile metronome gave insight toward test methodology and potential challenges involving latency or real-time strategy. The continuous visual metronome was a solid baseline for data analysis metrics and one of the key inspirational works for the hypothesis of this work.
+These specific haptic ventures have served as foundational works to inform design perspective. The work accomplished by the haptic drumset research group directly served to inform the threshold for acceptable timing of the vibrotactiles. For the four motors in use with the haptic device, a 50 ms ramp up time with 50 ms separation yields a 400 ms (150 bpm) window which agrees well with prior SMS research of rate limits. The vibrotactile metronome gave insight toward test methodology and potential challenges involving latency or real-time strategy. The continuous visual metronome was a solid baseline for data analysis metrics and one of the key inspirational works for the hypothesis of this work.
