--- a/Thesis/thesis-introduction.tex
+++ b/Thesis/thesis-introduction.tex
@@ -3,7 +3,7 @@
 \chapter{Introduction} \label{secIntro}
 The interstice is an intervening space. When applied to a rhythmic context, the interstitial beat can be represented by two distinct states; whether energy exists within this small moment in time or if it does not. 
 
-The underlying question, as applied to the daily practice of a trained musician or the innate entrainment\footnote{within this context entrainment will refer to external rhythmic synchronization} of the average human being, is whether the space between the beat matters. Does filling the space provide an added awareness or preparation for upcoming onsets?
+The underlying question, as applied to the daily practice of a trained musician or the innate entrainment\footnote{Within this context entrainment will refer to external rhythmic synchronization.} of the average human being, is whether the space between the beat matters. Does filling the space provide an added awareness or preparation for upcoming onsets?
 
 The objective of this work is to quantitatively discern whether a continuous wave, one which leads up to the maximum amplitude of the beat and trails off into a smooth decay, exhibits differentiation from it's instantaneous counterpart in communicating regular or irregular pulses. To quantify this differentiation, an expansive set of analog and discrete tap synchronization tests spanning the modalities of sound and touch are conducted across a group of musicians, amateurs, and non-musicians.
 
@@ -16,27 +16,25 @@ While it is clear that nearly every professional musician has honed technique ov
 
 Intrinsic awareness to subtle nuances of tempo remains a subject commonly unexposed to a student in training. Yet this ability, to perform in the spaces surrounding the beat, defines the difference between a rigid performance and one that flows with elasticity and musical expression.
 
-Is there missing information from the daily practice of a trained musician to an audible metronome? In a traditional sense, the audible click of the metronome minimizes the interstitial space with an instantaneous (or discrete) impulse signal. The pendulum motion exhibited also seeks to convey meaningful rhythmic information with the space it occupies in the visual modality, much like the gestural motion of a conductor. Although an excellent tool in establishing a sense of musical time and precision, the danger in use of such a mechanical object lies within the mathematical exactitude according to American composer and music critic Daniel Gregory Mason. Therefore manifesting a lifelessness where instead a living and breathing musical entity should exist with its own ``ebb and flow of rhythmical energy.''\cite{fitts2008new}
+Is there missing information from the daily practice of a trained musician to an audible metronome? In a traditional sense, the audible click of the metronome minimizes the interstitial space with an instantaneous (or discrete) impulse signal. The pendulum motion exhibited also seeks to convey meaningful rhythmic information with the space it occupies in the visual modality, much like the gestural motion of a conductor. Although an excellent tool in establishing a sense of musical time and precision, the danger in use of such a mechanical object lies within the mathematical exactitude according to American composer and music critic Daniel Gregory Mason. Therefore manifesting a lifelessness where instead a living and breathing musical entity should exist with its own ``ebb and flow of rhythmical energy''\cite{fitts2008new}.
 
 \section{Background}
 Humans have an innate ability to not only notice periodic movement, but to mimic and adapt to changes in their environment \cite{clayton2005time}. The extent of these capacities can be expanded through training which consists of recognizing, retaining, analyzing, and reproducing rhythms \cite{holland2010feeling}. The results of which can hold extra-musical impact as rhythmic stability finds important applications in everyday life.
 
-The practice of Dalcroze Eurythmics has sought to fill this knowledge gap as a curriculum developed by composer and educator Emile Jaques-Dalcroze in the early 1900's to integrate natural musical expression via movement \cite{jaques1930eurhythmics}. Through a series of exercises the instructor ushers his students to coordinate movement to varying levels of rhythmic push and pull. For example, a student's hands might be conducting a subdivision heard in the melody while simultaneously walking in coordination to the fundamental pulse played in the harmony. A sense of constant forward motion pervades the actions of the student allowing an embodiment of continuity which seeks to permeate all elements of musicality development.
+Dalcroze Eurythmics is a curriculum developed by composer and educator Emile Jaques-Dalcroze in the early 1900's that has sought to integrate natural musical expression via movement \cite{jaques1930eurhythmics}. Through a series of exercises the instructor ushers his students to coordinate movement to varying levels of rhythmic push and pull. A student might be conducting a subdivision heard in the melody with his/her hands while simultaneously stepping in coordination to the fundamental pulse played in the harmony. A sense of constant forward motion pervades the actions of the student. This overall embodiment of continuity seeks to permeate all elements of musicality development.
 
-From nearly two decades of work as a licensed Dalcroze instructor at Carnegie Mellon University, Professor Stephen Neely has implemented these techniques. His current research in design seeks to further explore the interstitial. In doing so he imparts an inquiry as to what is gained in attempting to fill the space between the \textit{crusis} (click moment of the beat) with a natural analog wave, one that provides a build up and decay common to natural happenings, much like the gestural motion of a conductor.
+From nearly two decades of work as a licensed Dalcroze instructor at Carnegie Mellon University, Professor Stephen Neely has implemented these techniques. His current research in design seeks to further explore the interstitial. In doing so he imparts an inquiry as to what is gained in attempting to fill the space between the \textit{crusis}\footnote{ The click moment of the beat.} with a natural analog wave, one that provides a build up and decay common to natural happenings, much like the gestural motion of a conductor.
 
 \section{Sensorimotor synchronization}
-Research surrounding the psychology of rhythmic perception is grounded within the framework of \textit{sensorimotor synchronization} (\textit{SMS}); defined as the coordination of rhythmic movement to an external rhythm. 
+Research surrounding the psychology of rhythmic perception is grounded within the framework of \textit{sensorimotor synchronization} (\textit{SMS}) or the coordination of rhythmic movement to an external rhythm. 
 
-What follows is a brief overview of SMS. Critical terminology is defined \ref{SMSTerms}, and followed by a primer of available tap test software \ref{ttsw}. A framework for the current work is established through discoveries illuminated by prior SMS research \ref{SMSFindings}. Finally, a brief discussion of both biomechanical and perception limitations \ref{rateLimits} concludes this chapter.
+What follows is a brief overview of SMS. Critical terminology is defined in \ref{SMSTerms}, followed by a primer of available tap test software in \ref{ttsw}. A framework for the current work is established through discoveries illuminated by prior SMS research in \ref{SMSFindings}. Finally, a brief discussion of both biomechanical and perception limitations in \ref{rateLimits} concludes this chapter.
 
 \subsection{Terminology} \label{SMSTerms}
-The main method of data collection for SMS tap based tests involve collection of the time delta between the tap and event onset, called the \textit{asynchrony}. Within the context of this work it shall be defined as:
+The main method of data collection for SMS tap based tests involve calculation of the time delta between the tap and event onset, called the \textit{asynchrony}. Within the context of this work it shall be defined as:
 \begin{equation*}Tap Onset-True Onset\end{equation*} 
 
-The mean of this asynchrony is typically negative (\textit{NMA}), indicative of the participants anticipation of the beat rather than reaction. Positive asynchronies imply a reactive approach thereby unfavorable within the context of this work. A positive asynchrony shorter than the fastest possible human reaction time window of 150 ms, or 400 bpm, (further discussed in \ref{rateLimits} and \ref{hapticConsiderations}) can arguably be considered an anticipation of the preceeding stimuli. This window of acceptable tap time informed the sanitization algorithm developed and outlined in Section \label{sanitizationProcedure}.
-
-The standard deviation of the asynchrony, $SD_{asy}$, is an index of stability; lower values indicative of a better level of synchronization \cite{repp2013sensorimotor}. For the purposes of this research, $SD_{asy}$ is predominantly shown superimposed onto bar charts as confidence interval lines.
+The mean of this asynchrony is typically negative (\textit{NMA}), indicative of the participants anticipation of the beat rather than reaction. Positive asynchronies imply a reactive approach thereby unfavorable within the context of this work. The standard deviation of the asynchrony, $SD_{asy}$, is an index of stability; lower values indicative of a better level of synchronization \cite{repp2013sensorimotor}. For the purposes of this research, $SD_{asy}$ is predominantly shown superimposed onto bar charts.
 
 Other important metrics include the variability and mean of the inter tap interval (\textit{ITI}) and the inter onset interval (\textit{IOI}), or the time between successive beats, measured in milliseconds. Mismatch between the ITI and IOI implies poor synchronization skill from the participant. 
 
@@ -48,39 +46,40 @@ Other important metrics include the variability and mean of the inter tap interv
 When a participant is instructed to tap on the beat, this is termed 1:1 synchronization. 4:1 synchronization, for example, is a beat subdivided into four with one tap on the beat. Subdivision tests typically yield lower mean $(SD_{asy})$ values \cite{repp2013sensorimotor}. This work will focus on 1:1 synchronization as discussed in \ref{testSetup}.
 
 \subsection{Tap Test Software} \label{ttsw}
-The finger tap mechanism holds strongest precedence in SMS research due to its reliability, precision \textit{(ms)}, and discrete nature. Studies predominantly rely on a MIDI based (drum pad) instrument to register tap events and provide some sort of auditory feedback. A few tap based software suites for experimentation and data acquisition are readily available: a Linux based system written by Finney in 2001 named \textit{FTAP} \cite{finney2001ftap}, and a \textit{Matlab} based toolbox by Elliot in 2009 called \textit{MatTAP} \cite{elliott2009mattap}. FTAP relies on a MIDI source with a reported mean auditory latency of approximately 14.6ms (SD = 2.8) \cite{schultz2016tap}. Superfluous and unregistered taps were common.
+The finger tap mechanism holds strongest precedence in SMS research due to its reliability, precision \textit{(ms)}, and discrete nature. Studies predominantly rely on a MIDI based (drum pad) instrument to register tap events and provide some sort of auditory feedback. A few tap based software suites for experimentation and data acquisition are readily available: a Linux based system written by Finney in 2001 named \textit{FTAP} \cite{finney2001ftap}, and a \textit{Matlab} based toolbox by Elliot in 2009 called \textit{MatTAP} \cite{elliott2009mattap}. FTAP relies on a MIDI source with a reported mean auditory latency of approximately 14.6 ms (SD = 2.8) \cite{schultz2016tap}. Superfluous and unregistered taps were common.
 
-Both \textit{FTAP} and \textit{MatTap} were viable options for this work but ultimately deemed either outmoded, lacking multi-threaded and high baudrate (115200) hardware support for haptic integration over serial, or incompatible with the system architecture in use \textit{(OSX 10.11.6 2.6GHz Intel I7)}.
+Both \textit{FTAP} and \textit{MatTap} were viable options for this work but ultimately deemed either outmoded, lacking multi-threaded and high baudrate (115200) hardware support for haptic integration over serial, or incompatible with the system architecture in use\footnote{Macbook Pro Retina Mid-2012 OSX 2.6GHz Intel I7 FW 10.11.6}.
 
-In a novel high-precision, low-latency approach by Prof. Schultz in 2015 at the University of Montreal \cite{schultz2016tap}, an Arduino force sensitive resistor (FSR) based tap mechanism was constructed. Latency between time of tap and auditory feedback was minimized with a mean of 0.6ms (SD = 0.3). The results also demonstrated the reliability of the FSR in recording fewer superfluous taps as well as fewer missed taps.
+In a novel high-precision, low-latency approach by Prof. Schultz in 2015 at the University of Montreal \cite{schultz2016tap}, an Arduino force sensitive resistor (FSR) based tap mechanism was constructed. Latency between time of tap and auditory feedback was minimized with a mean of 0.6 ms (SD = 0.3). The results also demonstrated the reliability of the FSR in recording fewer superfluous taps as well as fewer missed taps.
+
 It was inevitably decided to construct custom hardware and software to fit the test needs of the project as discussed in Section \ref{development} with a latency breakdown discussed in \ref{latencyCalc}.
 
 \subsection{Expectations} \label{SMSFindings}
-This section focusses on key insights from prior SMS research which inform expectations for the data analysis conducted in Chapter \ref{DataAnalysis}.
+This section focusses on key insights with respect to the auditory domain from prior SMS research which inform expectations for the data analysis conducted in Chapter \ref{DataAnalysis}.
 
 \subsubsection{Variability}
-The variability $(SD_{asy})$ is generally lower in professional musicians than non-musicians (no prior musical exposure). In an isochronous test with an IOI of 500 ms (120 bpm), surprisingly no difference in $SD_{asy}$ was found between amateurs and non-musicians \ref{repp2013sensorimotor}. From this study it is safe to assume the data analysis of this work will be grouped into professionals vs. (non-musicians and amateurs).
+The asynchrony variability $(SD_{asy})$ is generally lower in professional musicians than non-musicians or those with no prior musical exposure. In an isochronous test with an IOI of 500 ms (120 bpm), no difference in $SD_{asy}$ was found between amateurs and non-musicians \cite{repp2013sensorimotor}. The data analysis of this work will therefore be grouped into professionals versus non-musicians and amateurs.
 
-Percussionists and pianists had the lowest asynchronies of all musicians. This might imply that a high level of rhythmic expertise reduces variability of tapping, but due to the percussive nature of the instrument becomes hard to determine. Furthermore, as the duration of the IOI increases, $SD_{asy}$ increased in a non linear fashion.
+Percussionists and pianists had the lowest asynchronies of all musicians. This might imply that a high level of rhythmic expertise reduces variability of tapping but due to the percussive nature of the instruments becomes hard to determine. Furthermore, as the duration of the IOI increases, $SD_{asy}$ increased in a non linear fashion.
 
-When professionals migrated away from the tap test and instead used their native instruments, the results were greatly improved. It was reported by Stoklasa, Liebermann, and Fischinger in a paper presented at the Music Perception and Cognition in 2012 that musicians playing their own brass or string instrument in synchrony with a metronome showed a negligible NMA of –2  ms, unlike their tapping results of -13 ms \cite{repp2013sensorimotor}.
+When professionals migrated away from the tap test and instead used their native instruments, the results were greatly improved. It was reported by Stoklasa, Liebermann, and Fischinger in a paper presented at the Music Perception and Cognition in 2012 that musicians playing their own brass or string instrument in synchrony with a metronome showed an asynchrony of $–$2 ms, unlike their tapping results of $-$13 ms \cite{repp2013sensorimotor}.
 
 \subsubsection{Negative Mean Asynchrony}
-The NMA is typically smaller for musicians and remains relatively constant throughout a changing IOI. A linear increase in NMA as the IOI increases can be expected from non-musicians \cite{repp2013sensorimotor}. It was found that nonisochronous tapping introduces distortions within the ITI as opposed to steady or isochronous patterns. This had a tendency to affect local asynchronies but the global NMA remained persistant \cite{polak2016both}.
+The NMA is typically smaller for musicians and remains relatively constant throughout a changing IOI. A linear increase in NMA as the IOI increases can be expected from non-musicians \cite{repp2013sensorimotor}. As expected, nonisochronous tapping introduces distortions within the ITI as opposed to steady or isochronous patterns. This had a tendency to affect local asynchronies but the global NMA remained persistent \cite{polak2016both}.
  
-As a counter to the proposed hypothesis, Bialunkska et al. argued that the reason for a negative mean asynchrony was due to faster sensory accumulation from the auditory and visual modalities than from tactile feedback received from taps \cite{bialunska2011increasing}. The expectation was thus a dependence of the sensory accumulation rate to the stimulus intensity. This was later found to be uncorrelated \cite{bialunska2011increasing}.
+As a counter to the proposed hypothesis, Bialunkska et al. argued that the reason for a negative mean asynchrony was due to faster sensory accumulation from the auditory and visual modalities than from tactile feedback received from taps \cite{bialunska2011increasing}. The expectation was thus a dependence of the sensory accumulation rate to the stimulus intensity. This was later found to be uncorrelated.
 
 A positive mean asynchrony is expected as the IOI approaches the biomechanical limit of execution as discovered by Krause, Pollok, and Schnitzler in 2010 \cite{krause2010perception}.
 
 \subsubsection{Auditory Dominance in SMS}
-SMS research historically identifies what is known as an auditory advantage, or the dominance of the auditory motor connection within the task of beat synchronization. The auditory advantage is discussed in detail in Section \ref{AudAdv}. Recent studies have proven that given meaningful spatiotemporal information (as in the bouncing ball example discussed in \ref{visualMet}) synchronization is almost as good as an auditory metronome.
+SMS research historically identifies what is known as an auditory advantage, or the dominance of the auditory motor connection within the task of beat synchronization. The auditory advantage is discussed in detail in Section \ref{AudAdv}. Recent studies have proven that given meaningful spatiotemporal information, as in the bouncing ball example discussed in \ref{visualMet}, synchronization to alternate modalities can almost be as good as to an auditory metronome.
 
 \subsection{Rate Limits} \label{rateLimits}
 In order to impose valid constraints on the tests carried out in this work, it is important to understand the SMS rate limits. 
 
-According to experiments done by Keele, Pokorny, Corcos, and Ivry, in 1985, the calculation for the fastest absolute response time possible for a tap based test can be divided into either that of perception or motor speed, also known as the biomechanical limit \cite{keele1985perception}:
+According to experiments done by Keele, Pokorny, Corcos, and Ivry in 1985, the calculation for the fastest absolute response time possible for a tap based test can be divided into perception and the biomechanical limit \cite{keele1985perception}:
 \begin{enumerate}
-    \item Biomechanical Limit:
+    \item Biomechanical Limit\footnote{Defined as the fastest possible motor speed of a tapping action.}:
     \begin{itemize}
         \item Between the 5 - 7 Hz range, or a period of 150 - 200 ms \cite{repp2006rate}.
     \end{itemize}
@@ -92,8 +91,8 @@ According to experiments done by Keele, Pokorny, Corcos, and Ivry, in 1985, the 
             \item The lower rate limit was modality independent and found to be 0.56 Hz, or a period of 1800 ms (33 bpm) \cite{repp2006rate}. 
         \end{itemize}
         \item Visual stimuli was found to be less than 2.5 Hz, or a period of 400 ms (150 bpm). 
-        \item The haptic design section \ref{hapticConsiderations} discusses the rate limits of the touch modality.
+        \item The haptic design section \ref{hapticConsiderations} discusses the rate limits of touch.
     \end{itemize}
 \end{enumerate}
 
-In order to establish a middle ground and determine a fair and effective IOI window across musicians and non-musicians, this work has chosen to focus on tempi ranging from \textbf{45 - 180 bpm}, or a period of \textbf{333 - 1333 ms}. The selection presents an opportunity to test the higher bounds of relative ability and noise for the haptic metronome past the biomechanical limit range ($>$ 150 bpm).
+In order to establish a middle ground and determine a fair and effective IOI window across musicians and non-musicians, this work has chosen to focus on tempi ranging from \textbf{45 - 180 bpm}, or a period of \textbf{333 - 1333 ms}. The selection presents an opportunity to test both the higher and lower bounds of relative ability and noise for the haptic metronome past the biomechanical limit range ($>$ 150 bpm).
